updates the template values

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lambda-template",
+  "name": "serverless-websocket-api-template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
