--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Stephen McGuckin",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.72",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
